2011-12-10  Christopher Faylor  <me.cygwin2011@cgf.cx>

	* select.cc (select_stuff::wait): Very minor formatting fix.
	(peek_windows): Report on HWND handle used in queries.
	* select.h: Update copyright.
	* sigproc.h (cygwait): Eliminate multi-argument variety since more
	general implementation may cause odd problems in select.  Also force to
	always be inline.

2011-12-10  Christopher Faylor  <me.cygwin2011@cgf.cx>

	* sigproc.h (cygwait): Delete duplicate va_start and add matching
	va_end.

2011-12-10  Christopher Faylor  <me.cygwin2011@cgf.cx>

	* sigproc.h (cygwait): Tweak test for cancellable event to make it a
	little more clear.

2011-12-09  Christopher Faylor  <me.cygwin2011@cgf.cx>

	* exceptions.cc (ctrl_c_handler): YA in a series or reversions.  Put
	back _my_tls.remove along with a comment.
	(sigpacket::process): Remove code which now causes a gdb deadlock.
	* sigproc.cc (_cygtls::signal_exit): Signal debugger with signal number
	earlier.

2011-12-09  Christopher Faylor  <me.cygwin2011@cgf.cx>

	* dllfixdbg: Work around annoying gdb warning about missing
	.gnu_debuglink.

2011-12-09  Christopher Faylor  <me.cygwin2011@cgf.cx>

	Rename cygWFMO to cygwait throughout and use the magic of polymorphism
	to "wait for stuff".
	* fhandler.cc (fhandler_base_overlapped::wait_overlapped): Use
	simplified arg form of cygwait.
	* fhandler_console.cc (fhandler_console::read): Ditto.
	* fhandler_audio.cc (fhandler_dev_dsp::Audio_out::waitforspac): Ditto.
	(fhandler_dev_dsp::Audio_in::waitfordata): Ditto.
	* fhandler_fifo.cc (fhandler_fifo::wait): Ditto.
	* fhandler_serial.cc (fhandler_serial::raw_read): Ditto.
	(fhandler_serial::raw_write): Ditto.
	* select.cc (cygwin_select): Ditto.
	* sigproc.h (cygwait): Rename from cygWFMO.  Define two argument and
	single argument forms of this function.

	* fhandler_tty.cc (fhandler_pty_slave::open): Use method to query if
	tty is open.
	(fhandler_pty_slave::read): Send SIGHUP when master is detected as
	closed.